# ParyboTchi

./: README.md
ParyboTchi/: .gitignore  Shazam-test.py  audio.py  character.py  config.py  data.py  fonts.py  gemini.py  hardware.py  main.py  requirements.txt  test_window.py  ui_archive.py  ui_description.py  ui_main.py
ParyboTchi/docs/plans/: 2025-02-22-dead-state.md  (+2 more)
nomiboy/: .env.example  DESIGN.legacy.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
nomiboy/data/: odai_cards.json
nomiboy/docs/superpowers/plans/: 2026-04-26-nomiboy-implementation.md
nomiboy/docs/superpowers/specs/: 2026-04-26-nomiboy-design.md  2026-05-01-russian-tap-design.md
nomiboy/scripts/: install_pi.sh  nomiboy.service  run_pc.sh  run_scene.py
nomiboy/src/nomiboy/: __main__.py  app.py  colors.py  config.py  main.py
nomiboy/src/nomiboy/core/: asset_loader.py  audio_service.py  input_adapter.py  scene.py  scene_manager.py  tts_service.py
nomiboy/src/nomiboy/core/widgets/: button.py  keyboard.py  text.py
nomiboy/src/nomiboy/games/: __init__.py  bomb.py  odai.py  roulette.py  russian_tap.py
nomiboy/src/nomiboy/scenes/: game_select.py  keyboard_input.py  player_register.py  result.py  title.py
nomiboy/src/nomiboy/stores/: player_store.py
nomiboy/tests/: conftest.py  test_colors.py  test_config.py  test_game_select_paging.py  test_input_adapter.py  test_keyboard_widget.py  test_player_store.py  test_scene_manager.py  test_smoke.py  test_tts_service.py
nomiboy/tests/games/: test_bomb.py  test_odai.py  test_roulette.py  test_russian_tap.py
